-
Bug
-
Resolution: Done
-
P1: Critical
-
6.1
-
None
-
2
-
687b0ab7b74923a0dd217b613ba77f90c59a8e26 (qt/qtquick3d/dev) e0df3e359ce5f035897dd2fb5d5991ded029a1a5 (qt/qtquick3d/6.1) c79f0499811692837aaadc1091130ec5c8457ac5 (qt/qtquick3d/6.0)
The lancelot scene view3d/MultipleViews.qml asserts on exit:
ASSERT: "!data || !data->isShared()" in file /home/aavit/qt/qt-dev/qtbase/src/corelib/tools/qarraydata.cpp, line 234
Aborted (core dumped)
On linux with vulkan backend, lighting/Imagebasedlighting.qml and lighting/Lightmaps_referenced_material.qml also similarly assert on exit.
| For Gerrit Dashboard: QTBUG-89886 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 332518,5 | Another attempt to fix ref-deleted-scenemanager-on-destruct bug | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 332693,2 | Another attempt to fix ref-deleted-scenemanager-on-destruct bug | 6.1 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 332694,3 | Another attempt to fix ref-deleted-scenemanager-on-destruct bug | 6.0 | qt/qtquick3d | Status: MERGED | +2 | 0 |