Another attempt to fix ref-deleted-scenemanager-on-destruct bug

Fixes: QTBUG-89886
Pick-to: 6.1 6.0
Change-Id: I33d2d842f12a7388016a32a001941f74c3728667
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Christian Strømme <christian.stromme@qt.io>