src/quick3d/qquick3dviewport.cpp
@@ -118,10 +118,7 @@ QQuick3DViewport::~QQuick3DViewport()
     delete m_sceneRoot;
     m_sceneRoot = nullptr;
 
-    // We need to defere the deletion of the scene manager or items might
-    // try to deref using the now destroyed scene manaager.
-    connect(this, &QObject::destroyed, [sceneManager](QObject *) { delete sceneManager; });
-    sceneManager = nullptr;
+    delete sceneManager;
 
     // m_directRenderer must be destroyed on the render thread at the proper time, not here.
     // That's handled in releaseResources() + upon sceneGraphInvalidated
